# communere-interview-assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  uwsgi.ini
docs/: communere-assignment.postman_collection.json
src/: main.py  sqlite.db
src/communere/assignment/auth/: api.py  db.py  decorators.py  entities.py  errors.py  services.py  utils.py
src/communere/assignment/core/: api.py  config.py  db.py  di.py  errors.py
src/communere/assignment/project/: api.py  db.py  entities.py  errors.py  services.py
